project/stage/tests/reject/bad_var_decl/no_space_between_type_and_id.ul
float ___YEesh1239( int n,int A, int n,int[01]K) {

    voidInVarName;

}
